Update role to support Ansible 2.4 and later, fix ansible-lint issues.

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ test/tmp
 test/proj/this
 *.retry
 *.pyc
+__pycache__
 .tox
 tests/test_project.tgz
 tests/roles/cchurch.virtualenv
 tests/roles/chrismeyersfsu.provision_docker
-tests/roles/geerlingguy.repo-epel
