--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,20 +1,23 @@
 ---
 
 galaxy_info:
+  role_name: django
   author: Chris Church
   description: Configure and update a Django project.
   company: 'Nine More Minutes, Inc.'
   license: BSD
-  min_ansible_version: 2.1
+  min_ansible_version: 2.4
   platforms:
     - name: EL
       versions:
         - '6'
         - '7'
+        - '8'
     - name: Ubuntu
       versions:
         - trusty
         - xenial
+        - bionic
   galaxy_tags:
     - development
     - web
