--- a/tests/main.yml
+++ b/tests/main.yml
@@ -1,15 +1,15 @@
 ---
 
 - name: setup docker containers
-  include: setup.yml
+  import_playbook: setup.yml
   tags: [always, setup]
 
 - name: test custom lookup plugin
-  include: test_lookup.yml
+  import_playbook: test_lookup.yml
 
 - name: run tests for role
-  include: test.yml
+  import_playbook: test.yml
 
 - name: cleanup docker containers
-  include: cleanup.yml
+  import_playbook: cleanup.yml
   tags: [always, cleanup]
