--- a/tests/test_lookup.yml
+++ b/tests/test_lookup.yml
@@ -6,20 +6,20 @@
   vars:
     commands:
       - cmd: uname -a
-        changed_when: 'false'
+        changed_when: "false"
       - cmd: uptime
-        changed_when: 'true'
+        changed_when: "true"
       - cmd: date
-        changed_when: '"4" in result.stdout'
+        changed_when: "'4' in result.stdout"
       - cmd: whoami
   tasks:
     - name: run some things
-      command: '{{item.cmd}}'
-      with_items: '{{commands}}'
+      command: "{{ item.cmd }}"
+      with_items: "{{ commands }}"
       register: command_results
-      changed_when: >
-        (item.changed_when is defined)|ternary(
-          lookup('_django_eval', item.changed_when|default(false), result=command_results),
+      changed_when: >-
+        (item.changed_when is defined) | ternary(
+          lookup('_django_eval', item.changed_when | default(false), result=command_results),
           command_results.changed
         )
     - name: check some things
@@ -27,5 +27,5 @@
         that:
           - not command_results.results[0].changed
           - command_results.results[1].changed
-          - ('4' in command_results.results[2].stdout)|ternary(command_results.results[2].changed, not command_results.results[2].changed)
+          - ('4' in command_results.results[2].stdout) | ternary(command_results.results[2].changed, not command_results.results[2].changed)
           - command_results.results[3].changed
