Add run_once option for django management commands.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,7 +11,8 @@ django_virtualenv: ""
 django_pre_commands: []
 
 django_main_commands:
-  - migrate
+  - command: migrate
+    run_once: true
   - collectstatic
 
 django_post_commands: []
