--- a/tasks/update.yml
+++ b/tasks/update.yml
@@ -46,6 +46,7 @@
     link: "{{ item.link | default(omit) }}"
     merge: "{{ item.merge | default(omit) }}"
     skip: "{{ item.skip | default(omit) }}"
+  run_once: "{{ item.run_once | default(False) }}"
   with_items: "{{ django_pre_commands }}"
   register: _django_pre_commands_results
   changed_when: >-
@@ -68,6 +69,7 @@
     link: "{{ item.link | default(omit) }}"
     merge: "{{ item.merge | default(omit) }}"
     skip: "{{ item.skip | default(omit) }}"
+  run_once: "{{ item.run_once | default(False) }}"
   with_items: "{{ django_main_commands }}"
   register: _django_main_commands_results
   changed_when: >-
@@ -90,6 +92,7 @@
     link: "{{ item.link | default(omit) }}"
     merge: "{{ item.merge | default(omit) }}"
     skip: "{{ item.skip | default(omit) }}"
+  run_once: "{{ item.run_once | default(False) }}"
   with_items: "{{ django_post_commands }}"
   register: _django_post_commands_results
   changed_when: >-
