Add option to specify host to use for run_once django commands.

--- a/tasks/update.yml
+++ b/tasks/update.yml
@@ -46,7 +46,7 @@
     link: "{{ item.link | default(omit) }}"
     merge: "{{ item.merge | default(omit) }}"
     skip: "{{ item.skip | default(omit) }}"
-  when: item.run_once | default(false) | ternary(inventory_hostname == ansible_play_hosts_all[0], true)
+  when: item.run_once | default(false) | ternary(inventory_hostname == (item.run_once_host | default(django_run_once_host, true)), true)
   # run_once: "{{ item.run_once | default(false) }}"  # Doesn't work with Ansible < 2.8
   with_items: "{{ django_pre_commands }}"
   register: _django_pre_commands_results
@@ -70,7 +70,7 @@
     link: "{{ item.link | default(omit) }}"
     merge: "{{ item.merge | default(omit) }}"
     skip: "{{ item.skip | default(omit) }}"
-  when: item.run_once | default(false) | ternary(inventory_hostname == ansible_play_hosts_all[0], true)
+  when: item.run_once | default(false) | ternary(inventory_hostname == (item.run_once_host | default(django_run_once_host, true)), true)
   # run_once: "{{ item.run_once | default(false) }}"  # Doesn't work with Ansible < 2.8
   with_items: "{{ django_main_commands }}"
   register: _django_main_commands_results
@@ -94,7 +94,7 @@
     link: "{{ item.link | default(omit) }}"
     merge: "{{ item.merge | default(omit) }}"
     skip: "{{ item.skip | default(omit) }}"
-  when: item.run_once | default(false) | ternary(inventory_hostname == ansible_play_hosts_all[0], true)
+  when: item.run_once | default(false) | ternary(inventory_hostname == (item.run_once_host | default(django_run_once_host, true)), true)
   # run_once: "{{ item.run_once | default(false) }}"  # Doesn't work with Ansible < 2.8
   with_items: "{{ django_post_commands }}"
   register: _django_post_commands_results
