Drop Ubuntu 14 (trusty) from test matrices.

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py27-ansible24-{centos6,centos7,centos8,ubuntu14,ubuntu16,ubuntu18}
-    py37-ansible{25,26,27,28,29,devel}-{centos6,centos7,centos8,ubuntu14,ubuntu16,ubuntu18}
+    py27-ansible24-{centos6,centos7,centos8,ubuntu16,ubuntu18}
+    py37-ansible{25,26,27,28,29,devel}-{centos6,centos7,centos8,ubuntu16,ubuntu18}
 skipsdist = true
 
 [testenv]
@@ -24,7 +24,6 @@ setenv =
     centos6: ANSIBLE_LIMIT=centos6
     centos7: ANSIBLE_LIMIT=centos7
     centos8: ANSIBLE_LIMIT=centos8
-    ubuntu14: ANSIBLE_LIMIT=ubuntu14
     ubuntu16: ANSIBLE_LIMIT=ubuntu16
     ubuntu18: ANSIBLE_LIMIT=ubuntu18
     PYTHONDONTWRITEBYTECODE=1
