--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,11 +15,11 @@ galaxy_info:
         - '8'
     - name: Ubuntu
       versions:
-        - trusty
         - xenial
         - bionic
   galaxy_tags:
     - development
     - web
+    - django
 allow_duplicates: true
 dependencies: []
