--- a/tests/test.yml
+++ b/tests/test.yml
@@ -12,10 +12,13 @@
         - /root/test_venv
         - /home/admin/test_django1
         - /home/admin/test_django2
+        - /home/admin/test_django3
         - /home/normal/test_django1
         - /home/normal/test_django2
+        - /home/normal/test_django3
         - /home/normal/test_django1_venv2
         - /home/normal/test_django2_venv3
+        - /home/normal/test_django3_venv3
     - name: create admin user to test become capabilities
       user:
         name: admin
@@ -233,3 +236,43 @@
         path: "{{ django_virtualenv }}/bin/{{ test_python3_executable }}"
       register: _test_django_venv_python
       failed_when: not _test_django_venv_python.stat.exists
+
+- name: test as normal unprivileged user creating a python3 virtualenv with django3
+  hosts: containers
+  gather_facts: false
+  tags: [normal, virtualenv, django3, python3]
+  vars:
+    ansible_user: normal
+    ansible_pass: testpass
+    django_app_path: /home/normal/test_django3_venv3
+    django_virtualenv: "{{ django_app_path }}/env"
+    test_python_executable: "{{ test_python3_executable }}"
+    virtualenv_python: "{{ test_python3_executable }}"
+    virtualenv_path: "{{ django_virtualenv }}"
+    virtualenv_requirements:
+      - "{{ django_app_path }}/requirements.txt"
+  pre_tasks:
+    - import_tasks: test_pre_tasks.yml
+      when: test_django3_version | default('')
+    - name: create test requirements file
+      copy:
+        content: |
+          Django=={{ test_django3_version }}
+        dest: "{{ django_app_path }}/requirements.txt"
+      when: test_django3_version | default('')
+  tasks:
+    - import_role:
+        name: cchurch.virtualenv
+      when: test_django3_version | default('')
+    - import_role:
+        name: cchurch.django
+      when: test_django3_version | default('')
+  post_tasks:
+    - import_tasks: test_post_tasks.yml
+      when: test_django3_version | default('')
+    - name: check that static root was created
+      stat:
+        path: "{{ django_virtualenv }}/bin/{{ test_python3_executable }}"
+      register: _test_django_venv_python
+      failed_when: not _test_django_venv_python.stat.exists
+      when: test_django3_version | default('')
