--- a/requirements.txt
+++ b/requirements.txt
@@ -4,37 +4,38 @@
 #
 #    pip-compile requirements.in
 #
-ansible-lint==4.2.0
-ansible==2.9.2
+ansible-lint==4.2.0       # via -r requirements.in
+ansible==2.9.5            # via -r requirements.in, ansible-lint
+appdirs==1.4.3            # via virtualenv
 asgiref==3.2.3            # via django
-bumpversion==0.5.3
+bumpversion==0.5.3        # via -r requirements.in
 certifi==2019.11.28       # via requests
-cffi==1.13.2              # via cryptography
+cffi==1.14.0              # via cryptography
 chardet==3.0.4            # via requests
 cryptography==2.8         # via ansible
-django==3.0
-docker==4.1.0
-filelock==3.0.12          # via tox
-idna==2.8                 # via requests
-importlib-metadata==1.2.0  # via pluggy, tox
-jinja2==2.10.3            # via ansible
+distlib==0.3.0            # via virtualenv
+django==3.0.4             # via -r requirements.in
+docker==4.2.0             # via -r requirements.in
+filelock==3.0.12          # via tox, virtualenv
+idna==2.9                 # via requests
+importlib-metadata==1.5.0  # via pluggy, tox, virtualenv
+jinja2==2.11.1            # via ansible
 markupsafe==1.1.1         # via jinja2
-more-itertools==8.0.0     # via zipp
-packaging==19.2           # via tox
+packaging==20.1           # via tox
 pluggy==0.13.1            # via tox
-py==1.8.0                 # via tox
-pycparser==2.19           # via cffi
-pyparsing==2.4.5          # via packaging
+py==1.8.1                 # via tox
+pycparser==2.20           # via cffi
+pyparsing==2.4.6          # via packaging
 pytz==2019.3              # via django
-pyyaml==5.2               # via ansible, ansible-lint
-requests==2.22.0          # via docker
+pyyaml==5.3               # via ansible, ansible-lint
+requests==2.23.0          # via docker
 ruamel.yaml.clib==0.2.0   # via ruamel.yaml
-ruamel.yaml==0.16.5       # via ansible-lint
-six==1.13.0               # via ansible-lint, cryptography, docker, packaging, tox, websocket-client
-sqlparse==0.3.0           # via django
+ruamel.yaml==0.16.10      # via ansible-lint
+six==1.14.0               # via ansible-lint, cryptography, docker, packaging, tox, virtualenv, websocket-client
+sqlparse==0.3.1           # via django
 toml==0.10.0              # via tox
-tox==3.14.2
-urllib3==1.25.7           # via requests
-virtualenv==16.7.8        # via tox
-websocket-client==0.56.0  # via docker
-zipp==0.6.0               # via importlib-metadata
+tox==3.14.5               # via -r requirements.in
+urllib3==1.25.8           # via requests
+virtualenv==20.0.8        # via tox
+websocket-client==0.57.0  # via docker
+zipp==3.1.0               # via importlib-metadata
