--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
 envlist =
-    py27-ansible24-{centos6,centos7,centos8,ubuntu16,ubuntu18}
-    py37-ansible{25,26,27,28,29,devel}-{centos6,centos7,centos8,ubuntu16,ubuntu18}
+    ansible{28,29,210}-{centos6,centos7,centos8,ubuntu16,ubuntu18}
 skipsdist = true
 
 [testenv]
@@ -9,16 +8,13 @@ commands =
     ansible --version
     ansible-playbook -i tests/inventory -l {env:ANSIBLE_LIMIT} -vv tests/main.yml
 basepython =
-    py27: python2.7
-    py37: python3.7
+    ansible28: python3.7
+    ansible29: python3.8
+    ansible210: python3.8
 deps =
-    ansible24: ansible~=2.4.0
-    ansible25: ansible~=2.5.0
-    ansible26: ansible~=2.6.0
-    ansible27: ansible~=2.7.0
     ansible28: ansible~=2.8.0
     ansible29: ansible~=2.9.0
-    ansibledevel: git+https://github.com/ansible/ansible.git@devel
+    ansible210: ansible>=2.10.0a1,<2.11
     docker
 setenv =
     centos6: ANSIBLE_LIMIT=centos6
