--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    ansible{28,29,210}-{centos6,centos7,centos8,ubuntu16,ubuntu18}
+    ansible{28,29,210}-{centos6,centos7,centos8,ubuntu16,ubuntu18,ubuntu20}
 skipsdist = true
 
 [testenv]
@@ -22,6 +22,7 @@ setenv =
     centos8: ANSIBLE_LIMIT=centos8
     ubuntu16: ANSIBLE_LIMIT=ubuntu16
     ubuntu18: ANSIBLE_LIMIT=ubuntu18
+    ubuntu20: ANSIBLE_LIMIT=ubuntu20
     PYTHONDONTWRITEBYTECODE=1
     ANSIBLE_FORCE_COLOR=1
     ANSIBLE_CONFIG=tests/ansible.cfg
