Fix for synchronize issue with Ansible 2.10.

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ setenv =
     ubuntu16: ANSIBLE_LIMIT=ubuntu16
     ubuntu18: ANSIBLE_LIMIT=ubuntu18
     ubuntu20: ANSIBLE_LIMIT=ubuntu20
+    ansible210: ANSIBLE_ACTION_PLUGINS=tests/action_plugins_210
     PYTHONDONTWRITEBYTECODE=1
     ANSIBLE_FORCE_COLOR=1
     ANSIBLE_CONFIG=tests/ansible.cfg
